fix(footer) Fixed footer heading alignment issues.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap'); /* Roboto font import */
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root { /* Project root */
   font-size: 16px; /* Fontsize specification */
   font-family: 'Roboto', sans-serif;
@@ -178,23 +182,6 @@ h1, h2, h3, h4, h5, h6, a, p {
     background-color: #181a1d;
   }
 
-  .footer-headings { /* Footer headings */
-    display: flex;
-    font-size: 2vh;
-    justify-content: space-between;
-    margin: auto;
-    width: 70%;
-  }
-
-  .footer-headings h2 {
-    margin-top: 3rem;
-    color: #9e9e9e;
-  }
-
-  .footer-headings :nth-of-type(2) {
-    width: 53%; /* Reduced width to align heading to second column */
-  }
-
   .footer-content { /* Content of footer */
     display: flex;
     justify-content: space-between;
@@ -207,7 +194,14 @@ h1, h2, h3, h4, h5, h6, a, p {
   .footer-column { /* Columns used in footer */
     display: flex;
     flex-direction: column; /* Creates columns rather than rows */
+    justify-content: flex-end;
   }
+
+  .footer-column h2 {
+    margin-top: 3rem;
+    color: #9e9e9e;
+  }
+
 
   .footer-column a {
     text-decoration: none; /* Removes underline */
@@ -240,31 +234,24 @@ h1, h2, h3, h4, h5, h6, a, p {
     color: #ffffff;
   }
 
-  @media (max-width: 1000px) {
-    .footer-headings :nth-of-type(2) {
-      width: 54%; /* Increased width to keep heading aligned*/
-    }
-  }
 
-  @media (max-width: 700px) {
-    .footer-headings h2 {
+  @media (max-width: 1100px) {
+    .footer-column h2 {
       font-size: 2vh;
     }
 
-    .footer-headings :nth-of-type(2) {
-      width: 59%; /* Increased width to keep heading aligned*/
-    }
-  }
-
-  @media (max-width: 500px) {
     .footer-column a {
       font-size: 1rem;
     }
   }
 
-  @media (max-width: 300px) {
-    .footer-headings :nth-of-type(2) {
-      width: 65%; /* Increased width to keep heading aligned*/
+  @media (max-width: 700px) {
+    .footer-column h2 {
+      font-size: 1rem;
+    }
+
+    .footer-column a {
+      font-size: 0.8rem;
     }
   }
   
